<resources>
    <string name="app_name">EvolveUsers</string>
    <string name="ops">Ops... Alguma coisa aconteceu!!</string>
    <string name="try_again">Tente novamente mais tarde!!</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_up">Sign up</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="prompt_name">Nome</string>
    <string name="prompt_foto">Foto</string>
    <string name="prompt_cpfCnpj">CPF ou CNPJ</string>
    <string name="prompt_endereco">Endereço</string>
    <string name="prompt_dataNascimento">Data de Nascimento</string>
    <string name="prompt_sexo">Sexo</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_email">Not a valid email</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="list_of_all_users">Lista de Usuários</string>
    <string name="register_user">Cadastro</string>
</resources>